--- a/Bisma Adhira_.capstonemodul2.ipynb
+++ b/Bisma Adhira_.capstonemodul2.ipynb
@@ -58,6 +58,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "link tableau : https://public.tableau.com/app/profile/bisma.adhira/viz/BismaAdhira_StoryandDashboard/Dashboard?publish=yes"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "C9Ulfl2C97Ia"
       },
